profilelist1exp/unpackaged/objects/Partner_Location__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN (AF)</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS (AX)</fullName>
                </value>
                <value>
                    <fullName>ALBANIA (AL)</fullName>
                </value>
                <value>
                    <fullName>ALGERIA (DZ)</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA (AS)</fullName>
                </value>
                <value>
                    <fullName>ANDORRA (AD)</fullName>
                </value>
                <value>
                    <fullName>ANGOLA (AO)</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA (AI)</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA (AQ)</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA (AG)</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA (AR)</fullName>
                </value>
                <value>
                    <fullName>ARMENIA (AM)</fullName>
                </value>
                <value>
                    <fullName>ARUBA (AW)</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA (AU)</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA (AT)</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN (AZ)</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS (BS)</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN (BH)</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH (BD)</fullName>
                </value>
                <value>
                    <fullName>BARBADOS (BB)</fullName>
                </value>
                <value>
                    <fullName>BELARUS (BY)</fullName>
                </value>
                <value>
                    <fullName>BELGIUM (BE)</fullName>
                </value>
                <value>
                    <fullName>BELIZE (BZ)</fullName>
                </value>
                <value>
                    <fullName>BENIN (BJ)</fullName>
                </value>
                <value>
                    <fullName>BERMUDA (BM)</fullName>
                </value>
                <value>
                    <fullName>BHUTAN (BT)</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA (BO)</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA (BA)</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA (BW)</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND (BV)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Products__c</fullName>
        <label>Dell Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktops</fullName>
                </value>
                <value>
                    <fullName>Notebooks</fullName>
                </value>
                <value>
                    <fullName>Printers &amp; Projectors</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Head Office for Country?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipName>Partner_Locations_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Email__c</fullName>
        <label>Point of Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Name__c</fullName>
        <label>Point of Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone__c</fullName>
        <label>Point of Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isMainContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMainContact</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>